--- a/ninja run - 副本/Assembly-CSharp.csproj
+++ b/ninja run - 副本/Assembly-CSharp.csproj
@@ -55,9 +55,9 @@
   <ItemGroup>
      <Compile Include="Assets\AudioManager.cs" />
      <Compile Include="Assets\FollowTarget.cs" />
-     <Compile Include="Assets\gamecontroler.cs" />
      <Compile Include="Assets\PlayerMove.cs" />
      <Compile Include="Assets\Scripts\fruititem.cs" />
+     <Compile Include="Assets\Scripts\gamecontroler.cs" />
      <Compile Include="Assets\Scripts\PlayerBetterJump_n.cs" />
      <Compile Include="Assets\Scripts\PlayerJump_n.cs" />
      <Compile Include="Assets\Scripts\PlayerMove_n.cs" />
